--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-pandas
-plotly
-psycopg2
-requests
-tweepy
-numpy
+streamlit==0.71.0
+pandas==1.1.3
+plotly==1.58.4
+psycopg2==2.9.1
+requests==2.26.0
+tweepy==3.10.0
+numpy==1.21.0
